--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>core-login-form test</title>
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 		<link rel="import" href="core-login-form.html">
+		<link rel="import" href="core-alert.html">
+
 	</head>
 	<style>
 		html,body {
@@ -27,7 +29,7 @@
 	  	}
 	</style>
 	<body unresolved touch-action="auto">
-		<div class="container" layout horizontal center>
+		<div class="container" layout vertical center>
 			<core-login-form id="coreLoginForm" primaryColor="#FF0000"></core-login-form>
 		</div>
 	
