--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		html,body {
 		    height: 100%;
 		    margin: 0;
-		    background-color: #E5E5E5;
+		    background-color: white;
 		    font-family: 'RobotoDraft', sans-serif;
 	  	}
 	  	.container {
@@ -31,7 +31,7 @@
 	</style>
 	<body unresolved touch-action="auto">
 		<div class="container" layout vertical center>
-			<core-login-form id="coreLoginForm" primaryColor="#FF0000"></core-login-form>
+			<core-login-form id="coreLoginForm" primaryColor="#FF0000" rippleColor="#FFEBEB"></core-login-form>
 		</div>
 	
 	</body>
